<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/TextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/code_word_title" />

    <TextView
        style="@style/TextSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/code_word_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout xmlns:til="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColorHint="@color/white_50_alpha"
            til:errorEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputCodeWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code_word_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/TextSideHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/code_word_not_necessary" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnSentCodeWord"
        style="@style/TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/code_word_send" />

    <TextView
        android:id="@+id/btnRemoveCodeWord"
        style="@style/TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/code_word_remove"
        android:textColor="@color/text_button_text_color_red500" />
</LinearLayout>