<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ru.rescuesmstracker.widget.RSTPreferenceView
        android:id="@+id/pref_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/onboarding_interval_title" />

    <ru.rescuesmstracker.widget.RSTPreferenceView
        android:id="@+id/pref_max_sms_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/onboarding_max_sms_count_title" />

    <ru.rescuesmstracker.widget.RSTPreferenceView
        android:id="@+id/pref_coords_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/onboarding_coords_format_title" />
</LinearLayout>