<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white_50_alpha" />

        <TextView
            style="@style/TextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_title" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/settingsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarSettings"
        android:clipToPadding="false"
        android:padding="32dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trusted_phone_title"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView xmlns:recycler="http://schemas.android.com/apk/res-auto"
                android:id="@+id/listContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                recycler:layoutManager="android.support.v7.widget.LinearLayoutManager"
                recycler:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:contentDescription="@null"
                android:src="@color/white_50_alpha" />

            <TextView
                android:id="@+id/btnAddPhone"
                style="@style/TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_add_trusted_phone" />

            <ru.rescuesmstracker.widget.RSTPreferenceView xmlns:pref="http://schemas.android.com/apk/res-auto"
                android:id="@+id/codeWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                pref:title="@string/settings_code_word_title" />

            <TextView
                android:id="@+id/btnCodeWordWhy"
                style="@style/TextPrimary.Clickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/settings_code_word_why"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:contentDescription="@null"
                android:src="@color/white_50_alpha" />

            <ru.rescuesmstracker.widget.RSTPreferenceView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/prefWhoCanRequestLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_send_location" />

            <include layout="@layout/v_main_settings" />

            <ru.rescuesmstracker.widget.RSTPreferenceView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/prefActiveSim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_active_sim" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:contentDescription="@null"
                android:src="@color/white_50_alpha" />

            <TextView
                android:id="@+id/btnProblems"
                style="@style/TextPrimary.Clickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/settings_problem"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnShare"
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_share_white_24dp"
                android:drawableRight="@drawable/ic_share_white_24dp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/settings_share"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textVersion"
                style="@style/TextSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/btnScrollBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_expand_more_black_24dp"
        fab:backgroundTint="@color/amber_600" />
</RelativeLayout>