<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/rstTimer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <ru.rescuesmstracker.widget.LocationStatusBar
            android:id="@+id/locationStatusBar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnSettings"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@null"
            android:padding="12dp"
            android:src="@drawable/ic_settings_black_24dp"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/locationStatusBar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ru.rescuesmstracker.widget.RSTTimerView
        android:id="@+id/rstTimer"
        android:layout_width="256dp"
        android:layout_height="256dp"
        app:layout_constraintBottom_toTopOf="@+id/switchbutton_on_off"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.kyleduo.switchbutton.SwitchButton
        android:id="@+id/switchbutton_on_off"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textColor="@color/grey_900"
        android:textSize="16sp"
        app:kswBackColor="@color/switch_button_back_color"
        app:kswTextOff="@string/off"
        app:kswTextOn="@string/on"
        app:kswThumbColor="@color/grey_900"
        app:kswThumbHeight="56dp"
        app:kswThumbWidth="56dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rstTimer" />

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchbutton_on_off">

        <ru.rescuesmstracker.widget.ContactView
            android:id="@+id/contactView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:contentDescription="@null"
            android:src="@color/white_15_alpha" />

        <TextView
            android:id="@+id/textSendSMS"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/timer_send_my_coords" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>